; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwn/extr_if_iwn.c_iwn_alloc_sched.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwn/extr_if_iwn.c_iwn_alloc_sched.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwn_softc = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iwn_softc*)* @iwn_alloc_sched to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iwn_alloc_sched(%struct.iwn_softc* %0) #0 {
  %2 = alloca %struct.iwn_softc*, align 8
  store %struct.iwn_softc* %0, %struct.iwn_softc** %2, align 8
  %3 = load %struct.iwn_softc*, %struct.iwn_softc** %2, align 8
  %4 = load %struct.iwn_softc*, %struct.iwn_softc** %2, align 8
  %5 = getelementptr inbounds %struct.iwn_softc, %struct.iwn_softc* %4, i32 0, i32 2
  %6 = load %struct.iwn_softc*, %struct.iwn_softc** %2, align 8
  %7 = getelementptr inbounds %struct.iwn_softc, %struct.iwn_softc* %6, i32 0, i32 1
  %8 = bitcast i32* %7 to i8**
  %9 = load %struct.iwn_softc*, %struct.iwn_softc** %2, align 8
  %10 = getelementptr inbounds %struct.iwn_softc, %struct.iwn_softc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @iwn_dma_contig_alloc(%struct.iwn_softc* %3, i32* %5, i8** %8, i32 %11, i32 1024)
  ret i32 %12
}

declare dso_local i32 @iwn_dma_contig_alloc(%struct.iwn_softc*, i32*, i8**, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
